Kubernetes/animal-album-manifests/image-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-service
  namespace: animal-album
spec:
  replicas: 5
  selector:
    matchLabels:
      app: image-service
  template:
    metadata:
      labels:
        app: image-service
    spec:
      serviceAccountName: image-service-sa
      containers:
      - name: image-service
        image: sayedimran/animal-image-service:v1.0.0
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
