Kubernetes/animal-album-manifests/image-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-service
  namespace: animal-album
spec:
  selector:
    app: image-service
  ports:
  - port: 80
    targetPort: 8000
